--- a/0103/style.css
+++ b/0103/style.css
@@ -11,8 +11,16 @@ body {
     margin: 10px;
 }
 
+.card-conteudo h1 span {
+    color: rgb(0, 145, 145);
+}
+
 .card-imagem img {
     width: 100px;
     border-radius: 50%;
 }
 
+.card i {
+    font-weight: bold;
+    color: #b11a1a
+}
